[tool.poetry]
name = "load_s3_files_from_dynamodb_stream_to_redshift_lambda"
version = "0.1.0"
description = ""
authors = ["Eugene"]

[tool.poetry.dependencies]
python = "^3.9"
redshift-connector = "^2.0.910"

[tool.poetry.dev-dependencies]
boto3 = "^1.26.84"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
