[tool.poetry]
name = "start_dms_replication_task_lambda"
version = "0.1.0"
description = ""
authors = ["Eugene"]

[tool.poetry.dependencies]
python = "^3.9"
PyMySQL = "^1.0.2"
redshift-connector = "^2.0.910"

[tool.poetry.dev-dependencies]
boto3 = "^1.26.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
